[package]
name = "mcp-backend"
version = "0.1.0"
edition = "2021"
description = "Backend MCP seguro con scraping, ML y autenticación"

[dependencies]
# Framework web
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression", "limit"] }

# Serialización
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Autenticación y seguridad
jsonwebtoken = "9.2"
argon2 = "0.5"
uuid = { version = "1.0", features = ["v4"] }

# Scraping
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.19"
url = "2.5"


# Base de datos
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid"] }

# Logging y utilidades
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
